--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -35,17 +35,9 @@ options(
 wine_df = 
   read_csv(
   "./wine_data/tidy/wine_all.csv")
-
-### remove region 2, taster twitter and missing values in region 1.
-
-#wine_type <- read_csv("./wine_data/winemag-data-130k-v2.csv") %>% 
-#            group_by(variety) %>% 
-#            count() %>% 
-#            arrange(desc(n)) %>% 
-#            as.tibble()
-
 ```
 
+<br>
 
 # Distribution of price by wine type
 First plot the distribution of wine prices across four different wine types: red, rose, sparkling, white. We saw the four distributions are all very right skewed since we have many very pricy wine. Therefore, we choose to only look at price under $100. 
@@ -67,16 +59,18 @@ It is interesting to see that red and sparking wine have similar distribution wi
 
 ## Conduct a ANOVA test on price vs wine type
 
-The results is significant which means that we can conclude that at least one wine type's price is different from the others.
-
-```{r, message=FALSE, warning=FALSE}
+```{r, echo = FALSE, message=FALSE, warning=FALSE}
 wine_price = 
   wine_df %>% 
   filter(price <= 100)
 res.aov <- aov(price ~ type, data = wine_price)
-summary(res.aov)
 
+res.aov %>%
+  broom::tidy() %>% 
+  knitr::kable()
 ```
+
+The results is significant which means that we can conclude that at least one wine type's price is different from the others.
 
 <br><br>
 
@@ -102,7 +96,9 @@ The results is significant which means that we can conclude that at least one wi
 ```{r, message=FALSE, warning=FALSE}
 
 res.aov <- aov(points ~ type, data = wine_df)
-summary(res.aov)
+res.aov %>% 
+  broom::tidy() %>% 
+  knitr::kable()
 
 ```
 
@@ -228,6 +224,7 @@ y <- list(
 
 ```
 
+<br>
 
 # Who rates the highest price wine? 
 We want to know the tasters that rated wines with price greater than $800.Most of the most expensive wine are rated by Roger Voss.
@@ -244,6 +241,7 @@ wine_df %>%
 
 ```
 
+<br>
 
 # Who reviews the largest number of wines?
 Roger Voss rated the most number of wine at WineEthusiast Magazine. 
@@ -302,9 +300,9 @@ The results is insignificant which means that we can conclude that ratings for n
 wine_new_old=
 wine_df %>% 
   mutate(new_old = ifelse(new_world == 0, "old_world", "new_world"))
-t.test(price ~ new_old, data = wine_new_old)
-
-
+t.test(price ~ new_old, data = wine_new_old)  %>%
+  broom::tidy() %>% 
+  knitr::kable()
 ```
 
 <br><br>
@@ -333,8 +331,8 @@ wine_price =
 wine_df %>% 
   mutate(new_old = ifelse(new_world == 0, "old_world", "new_world")) %>% 
   filter(price<=100)
-t.test(price ~ new_old, data = wine_price)
-
-
+t.test(price ~ new_old, data = wine_price) %>%
+  broom::tidy() %>% 
+  knitr::kable()
 ```
 
