--- a/word_cloud.Rmd
+++ b/word_cloud.Rmd
@@ -188,19 +188,25 @@ sparkling_word
 ```{r export, include = FALSE}
 saveWidget(red_word, "tmp1.html", selfcontained = F)
 webshot("tmp1.html", "./image/red_word.png", delay = 5, vwidth = 500, vheight = 500)
-file.remove("tmp1.html")
 
 saveWidget(white_word, "tmp2.html", selfcontained = F)
 webshot("tmp2.html", "./image/white_word.png", delay = 5, vwidth = 500, vheight = 500)
-file.remove("tmp2.html")
 
 saveWidget(rose_word, "tmp3.html", selfcontained = F)
 webshot("tmp3.html", "./image/rose_word.png", delay = 5, vwidth = 500, vheight = 500)
-file.remove("tmp3.html")
 
-saveWidget(sparkling_word, "tmp3.html", selfcontained = F)
-webshot("tmp3.html", "./image/sparkling_word.png", delay = 5, vwidth = 500, vheight = 500)
-file.remove("tmp3.html")
+saveWidget(sparkling_word, "tmp4.html", selfcontained = F)
+webshot("tmp4.html", "./image/sparkling_word.png", delay = 5, vwidth = 500, vheight = 500)
+
+
+unlink("tmp1_files", recursive = TRUE)
+unlink("tmp2_files", recursive = TRUE)
+unlink("tmp3_files", recursive = TRUE)
+unlink("tmp4_files", recursive = TRUE)
+remove.file("tmp1.html")
+remove.file("tmp2.html")
+remove.file("tmp3.html")
+remove.file("tmp4.html")
 ```
 
 
