--- a/index.Rmd
+++ b/index.Rmd
@@ -1,31 +1,31 @@
 ---
-title: ""
+title: "Wine Rating - What's behind great wines?"
 output: 
   html_document:
     toc: false
     toc_float: false
-    fontsize: 14px
 ---
 
 <br>
 
-<h1 style="text-align: center;" markdown="1">Wine Rating - What's behind great wines?
+**Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang (yz3736)**
+
 
 <br>
 
-<h4 style="text-align: center;" markdown="1">Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang (yz3736)</h6>
 
-<br>
+Wine is one of the most commonly seen alcoholic drinks, and there is a tremendous amount of knowledge about wine history, wine categories, and what characterizes a great bottle of wine.
 
-Wine is one of the most commonly seen alcoholic drinks. With wine consumption in the U.S. at an all-time high, there are a huge amount of varieties of wine on the market. Consumers are more eager to learn about how to pick a good wine. There are many review systems online such as Vinno, Wine Enthusiasts. It is important for the consumers to learn what is behind those ratings. 
+This dataset offers us an excellent opportunity to explore what factors are associated with wine ratings. We hope to firstly get the image of wine price and rating trend using exploratory graphs. We also hope to identify the keywords of each type of wine using the word cloud tools. We also aim to use an interactive map for a better demonstration of wine distribution geographically. 
 
-This data offers us a great opportunity to explore what factors are associated with wine ratings. We hope to conduct regression analysis of the wine rating and price based on location/grape type/notes/region to see if there are significant differences among these factors.The regression model would help customers estimate and predict wine rating with a series of wine characteristics. We also want to provide people with a interactive website to visualize wine ratings and prices. 
+In addition, we hope to conduct regression analyses of the wine rating and price and better capture the relationship between wine rating and prices. The regression models would help customers estimate and predict wine rating with a series of wine characteristics.
+
 
 <h6 style="text-align: center;" markdown="1"><img src="image/all_wine_wordcloud.png" style="width:70%"></h6>
 
 <br>
 
-### Fun Facts Summary
+## Fun Facts Summary
 
 <br>
 
@@ -33,9 +33,12 @@ This data offers us a great opportunity to explore what factors are associated w
 
 * 2004 was the year of highest average wine price for white wine - above $50!
 
+* England was the country of highest wine rating overall - average rating was 92/100.
+
+* Words appeared most frequently for red wine, white wine, rose wine and sparkling wine are fruit, acidity, acidity and apple, respectively.
+
 * Relationship between wine price and rating are segmented - see details in [regression analyses](regression.html)!
 
-* England was the country of highest wine rating overall - average rating was 92/100.
 
 
 
