--- a/mapping.Rmd
+++ b/mapping.Rmd
@@ -9,9 +9,7 @@ output:
 
 <br>
 
-Below are several choropleth maps depicting where wines are made and the average ratings and prices for each country.
-
-
+We were curious to look at the geographical variation within our wine dataset, in particular where wines were most commonly produced. In order to help visualize the dataset, we generated several maps to show us the location where wines were produced and the total number of wines from each US state or country in our dataset. Below are several maps depicting where wines are made, the total number of wines from the region, and the average ratings and prices for each country.
 
 ```{r setup, include=FALSE}
 library(tidyverse)
@@ -71,6 +69,40 @@ mutate(
   arrange(desc(total))
 ```
 
+## Static Map
+
+<br>
+
+The static map depicts the average rating of each countries' wines. England leads in terms of average wine ratings, with Austria, Germany, and India close behind. It is important to note that there were a much smaller sample size for wines from England India, with only 69 and 9 wines sampled respectively, as compared to other countries with high rankings. On the lower end of the averages cores is Peru and Ukraine.
+
+```{r static_map}
+wine_by_country_static = wine_by_country %>% 
+ mutate(
+   country = recode(country, "United States" = "USA")) %>% 
+  mutate(
+   country = recode(country, "United Kingdom" = "UK"))
+ 
+
+world_static = map_data("world") %>%
+  left_join(wine_by_country_static, by = c("region" = "country"))
+
+ggplot(data = world_static,
+               mapping = aes(x = long, y = lat, group = group)) +
+  geom_polygon(aes(fill = avg_rating)) +
+  scale_fill_continuous(low = "rosybrown1", high = "darkred",
+                        na.value = "snow2") +
+  coord_map(xlim = c(-180,180), ylim = c(-60, 80)) +
+  theme(
+    axis.title.x = element_blank(),
+    axis.text.x  = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.title.y = element_blank(),
+    axis.text.y  = element_blank(),
+    axis.ticks.y = element_blank(),
+    panel.background = element_rect(fill = "white"))
+```
+
+
 ```{r choropleth_map, echo = T, warning = F, results = 'hide'}
 states <- states(cb = TRUE)
 
@@ -106,7 +138,7 @@ state_map = states_merged_wine %>%
   addLegend(pal = mypal, 
             values = states_merged_wine$total, 
             position = "bottomright", 
-            title = "Wines")
+            title = "Total Wine Count")
 ```
 
 ```{r world_map_labels_choropleth, echo = T, warning = F, results = 'hide'}
@@ -156,50 +188,16 @@ world_map_labels = countries_merged_wine %>%
   addLegend(pal = world_pal, 
             values = countries_merged_wine$total, 
             position = "bottomright", 
-            title = "Wines")
-```
-
-## Static Map
-
-<br>
-
-The static map depicts the average rating of each countries' wines. England leads in terms of average wine ratings, with Austria, Germany, and India close behind. It is important to note that there were a much smaller sample size for wines from England India, with only 69 and 9 wines sampled respectively, as compared to other countries with high rankings. On the lower end of the averages cores is Peru and Ukraine.
-
-```{r static_map}
-wine_by_country_static = wine_by_country %>% 
- mutate(
-   country = recode(country, "United States" = "USA")) %>% 
-  mutate(
-   country = recode(country, "United Kingdom" = "UK"))
- 
-
-world_static = map_data("world") %>%
-  left_join(wine_by_country_static, by = c("region" = "country"))
-
-ggplot(data = world_static,
-               mapping = aes(x = long, y = lat, group = group)) +
-  geom_polygon(aes(fill = avg_rating)) +
-  scale_fill_continuous(low = "rosybrown1", high = "darkred",
-                        na.value = "snow2") +
-  coord_map(xlim = c(-180,180), ylim = c(-60, 80)) +
-  theme(
-    axis.title.x = element_blank(),
-    axis.text.x  = element_blank(),
-    axis.ticks.x = element_blank(),
-    axis.title.y = element_blank(),
-    axis.text.y  = element_blank(),
-    axis.ticks.y = element_blank(),
-    panel.background = element_rect(fill = "white"))
+            title = "Total Wine Count")
 ```
 
 ## Interactive Maps {.tabset}
 
-There are 2 interactive maps, one for US states and a world map. The interactive maps allows for users to hover over a specific US state or country of interest, and look at the total number of wines in our database from that particular state or country, along with their average ratings and prices. 
+We produced two interactive maps, one for US states and a world map. The interactive maps allows for users to hover over a specific US state or country of interest, and look at the total number of wines in our database from that particular state or country, along with their average ratings and prices. 
 
 A large majority of wines in our database were produced in the United States, followed by France and Italy. Within the United States, most wines came from the West Coast, with California being a leading producer of US wines.
 
 ### United States
-
 ```{r state_map}
 state_map
 ```
@@ -210,3 +208,14 @@ world_map_labels
 ```
 
 ## {-}
+
+## Limitations
+
+As mentioned previously, a large majority of wines were produced in the United States. There were very little wines in our dataset from non-European or non-Western countries. This is most likely because our data was scraped from a website that focused primarily on Western and European wines. It is important to note that there was a lack of wines from Eastern countries. For example, there were 9 wines sampled from India and 1 from China. This could bias our findings, in particular average ratings and prices for each country.
+
+```{r country_table}
+wine_by_country %>% 
+  group_by(country) %>% 
+  knitr::kable()
+```
+
