--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Wine Rating - What's behind great wines?"
+title:
 output: 
   html_document:
     toc: false
@@ -8,7 +8,11 @@ output:
 
 <br>
 
-**Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang (yz3736)**
+<h1 style="text-align: center;" markdown="1">Wine Rating - What's behind great wines?</h1>
+
+<br>
+
+<h4 style="text-align: center;" markdown="1">**Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang (yz3736)**</h1>
 
 
 <br>
