--- a/about.Rmd
+++ b/about.Rmd
@@ -5,7 +5,7 @@ output: html_document
 
 <br></br>
 
-# <a href=""><img src="image/jady.jpg"></a><span style="padding-left:25px">Tianheng (Jady) Hu
+# <a href=""><img src="image/jady.png"></a><span style="padding-left:25px">Tianheng (Jady) Hu
  
 I'm Jady, a second year MPH student in Biostatistics at Columbia University Mailman School of Public Health. I received my BS in Statistics and Economics from Boston University. My professional interests include data science and clinical trial methodology. My favorite wine is called Josh and wine type is rose.
 
